--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="fragment_users_title">Users</string>
     <string name="fragment_albums_title_">Albums by %s</string>
     <string name="fragment_photos_title_">Photos by %s</string>
+    <string name="fragment_photo_title">Photo</string>
 </resources>
